working on animals model and reporting

--- a/app/views/animal_events/_diagnostic_fields.html.haml
+++ b/app/views/animal_events/_diagnostic_fields.html.haml
@@ -2,4 +2,5 @@
 .nested-fields
   =link_to_remove_association 'Remove diagnostic', f
   =f.input(:symptoms)
+  =f.input(:corpse_location)
   =f.association(:disease)
