--- a/app/views/animals/show.html.haml
+++ b/app/views/animals/show.html.haml
@@ -14,8 +14,8 @@
       -l.attribute :mother, :url => true
       -l.attribute :identification_number
       -l.attribute :income_on
+      -l.attribute :income_reasons
       -l.attribute :outgone_on
-      -l.attribute :purchased_on
       -l.attribute :comment
     -if @animal.picture.exists?
       =image_tag(@animal.picture.url(:thumb))
