--- a/app/views/animal_diagnostics/show.html.haml
+++ b/app/views/animal_diagnostics/show.html.haml
@@ -1,9 +1,9 @@
 =toolbar do |t|
-  -t.edit @diagnostic
-  -t.print_entity @diagnostic
-  -t.destroy(@diagnostic, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @diagnostic.destroyable?
+  -t.edit @animal_diagnostic
+  -t.print_entity @animal_diagnostic
+  -t.destroy(@animal_diagnostic, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_diagnostic.destroyable?
 
-=attributes_list(@diagnostic) do |l| # liste des champs à afficher
+=attributes_list(@animal_diagnostic) do |l| # liste des champs à afficher
   -l.attribute :name
 
-=tabbox(:diagnostic) do |tb|
+=tabbox(:animal_diagnostic) do |tb|
