--- a/app/views/animal_diseases/show.html.haml
+++ b/app/views/animal_diseases/show.html.haml
@@ -1,13 +1,13 @@
 =toolbar do |t|
-  -t.edit @disease
-  -t.print_entity @disease
-  -t.destroy(@disease, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @disease.destroyable?
+  -t.edit @animal_disease
+  -t.print_entity @animal_disease
+  -t.destroy(@animal_disease, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_disease.destroyable?
 
-=attributes_list(@disease) do |l| # liste des champs à afficher
+=attributes_list(@animal_disease) do |l| # liste des champs à afficher
   -l.attribute :name
   -l.attribute :code
   -l.attribute :zone
 
-=tabbox(:disease) do |tb|
+=tabbox(:animal_disease) do |tb|
   -tb.tab(:cares) do
     =list(:cares)
