--- a/app/views/animal_events/_treatment_fields.html.haml
+++ b/app/views/animal_events/_treatment_fields.html.haml
@@ -1,5 +1,12 @@
 -# Generated automatically. Don't edit this file.
 .nested-fields
   =link_to_remove_association 'Remove treatment', f
+  =f.input(:started_at)
+  =f.input(:quantity)
+  =f.association(:quantity_unit)
   =f.association(:drug)
-  =f.association(:disease)
+  =f.association(:prescription)
+  =f.input(:duration_wait_for_milk)
+  =f.input(:duration_unit_wait_for_milk)
+  =f.input(:duration_wait_for_meat)
+  =f.input(:duration_unit_wait_for_meat)
