--- a/app/views/animal_posologies/show.html.haml
+++ b/app/views/animal_posologies/show.html.haml
@@ -1,7 +1,7 @@
 =toolbar do |t|
-  -t.edit @prescription
-  -t.print_entity @prescription
-  -t.destroy(@prescription, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @prescription.destroyable?
+  -t.edit @animal_posology
+  -t.print_entity @animal_posology
+  -t.destroy(@animal_posology, :method=>:delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @animal_posology.destroyable?
 
-=attributes_list(@prescription) do |l|
+=attributes_list(@animal_posology) do |l|
   -l.attribute :name
