Update forms and implements new functionnalities (in forms)

--- a/app/views/custom_fields/_form.html.haml
+++ b/app/views/custom_fields/_form.html.haml
@@ -1,6 +1,6 @@
 -field_set do
   -input :name
-  -input :nature
+  -input :nature, :show => {:decimal => :decimal_options, :string => :string_options}
   -input :active
   -input :required
 
