--- a/app/views/listings/_form.html.haml
+++ b/app/views/listings/_form.html.haml
@@ -3,4 +3,4 @@
   -input :root_model, :source => :root_models
   -input :conditions, :field => :text
   -input :comment, :field => :text
-
+  -partial :nodes
