--- a/app/views/sale_natures/_form.html.haml
+++ b/app/views/sale_natures/_form.html.haml
@@ -17,7 +17,7 @@
   -input :downpayment_rate
 
 =field_set(:accountancy) do
-  -input :journal, :buttons => {:new => {:nature=>'sales'}}
+  -association :journal, :new => {:nature => 'sales'}
 
 
 
