--- a/app/views/accounts/load.html.haml
+++ b/app/views/accounts/load.html.haml
@@ -1,16 +1,13 @@
 =form_tag({}, :class=>"flex") do
-  .fields.flex
-    =formalize do |f|
-      -f.title
-      -f.field tl(:accounts_to_load), select_tag("list", options_for_select(Account.lists.collect{|k,v| [v, k]}.sort))
-      
-      -#for setting in [:unset_reconcilable_old_third_accounts, :set_reconcilable_new_but_existing_third_accounts]
-        -f.field tl(setting), check_box_tag(setting, "1", params[setting])
+  =field_set do
+    =field(tl(:accounts_to_load), select_tag("list", options_for_select(Account.lists.collect{|k,v| [v, k]}.sort)))
 
-      -preferences = Preference.where("name LIKE ?", "%_accounts").order("name")
-      -#if preferences.count > 0
-        -f.title :preferences
-        -for preference in 
-          -f.field t("preferences."+preference.name), {:datatype=>preference.nature.to_sym, :model=>preference.model, :value=>preference.value, :name=>"preference[#{preference.name}][value]"}
+    -#for setting in [:unset_reconcilable_old_third_accounts, :set_reconcilable_new_but_existing_third_accounts]
+      -field tl(setting), check_box_tag(setting, "1", params[setting])
+
+    -preferences = Preference.where("name LIKE ?", "%_accounts").order("name")
+    -#if preferences.count > 0
+      -for preference in 
+        -field t("preferences."+preference.name), {:datatype=>preference.nature.to_sym, :model=>preference.model, :value=>preference.value, :name=>"preference[#{preference.name}][value]"}
   =form_actions do
     =submit_tag tl(:load)
