--- a/app/views/incoming_payment_modes/_form.html.haml
+++ b/app/views/incoming_payment_modes/_form.html.haml
@@ -2,7 +2,7 @@
 
 -field_set do
   -input :name
-  -association :cash, :source => "entity#cashes"
+  -association :cash
   -input :with_accounting, :show => :accountancy
 
 -field_set(:accountancy) do
@@ -10,10 +10,10 @@
   -input :with_commission, :show => :commission
 
 -field_set(:deposit) do
-  -input :depositables_account, :source => "Account#payments_to_deposit_accounts", :new => {:number => Account.chart_number(:deposit_pending_payments)}
-  -input :depositables_journal
+  -association :depositables_account, :source => "accounts#deposit_pending_payments", :new => {:number => Account.chart_number(:deposit_pending_payments)}
+  -association :depositables_journal
 
 -field_set(:commission) do
   -input :commission_base_amount
   -input :commission_percent
-  -input :commission_account, :source => "Account#charges_account", :new => {:number => Account.chart_number(:charges)}
+  -association :commission_account, :source => "accounts#charges", :new => {:number => Account.chart_number(:charges)}
