--- a/app/views/animal_events/_form.html.haml
+++ b/app/views/animal_events/_form.html.haml
@@ -15,15 +15,15 @@
   =nested_association(:diagnostics) do
     =input :symptoms
     =input :corpse_location
-    =association :disease
+    =input :disease
   
 -field_set(:treatment) do |f|
   =nested_association(:treatments) do
     =input :started_at
     =input :quantity
-    =association :quantity_unit
-    =association :drug
-    =association :prescription
+    =input :quantity_unit
+    =input :drug
+    =input :prescription
     -input :duration_wait_for_milk
     -input :duration_unit_wait_for_milk
     -input :duration_wait_for_meat
