--- a/app/views/animal_events/_treatment_fields.html.haml
+++ b/app/views/animal_events/_treatment_fields.html.haml
@@ -1,12 +1,12 @@
 -# Generated automatically. Don't edit this file.
 .nested-fields
   =link_to_remove_association('labels.remove_treatment'.t, f, :class => 'nested-remove remove-treatment')
-  =f.input(:started_at)
-  =f.input(:quantity)
-  =f.input(:quantity_unit)
-  =f.input(:drug)
-  =f.input(:prescription)
-  =f.input(:duration_wait_for_milk)
-  =f.input(:duration_unit_wait_for_milk)
-  =f.input(:duration_wait_for_meat)
-  =f.input(:duration_unit_wait_for_meat)
+  =f.input(:started_at, :wrapper_html => {:id => 'started_at-wrapper'})
+  =f.input(:quantity, :wrapper_html => {:id => 'quantity-wrapper'})
+  =f.input(:quantity_unit, :wrapper_html => {:id => 'quantity_unit-wrapper'})
+  =f.input(:drug, :wrapper_html => {:id => 'drug-wrapper'})
+  =f.input(:prescription, :wrapper_html => {:id => 'prescription-wrapper'})
+  =f.input(:duration_wait_for_milk, :wrapper_html => {:id => 'duration_wait_for_milk-wrapper'})
+  =f.input(:duration_unit_wait_for_milk, :wrapper_html => {:id => 'duration_unit_wait_for_milk-wrapper'})
+  =f.input(:duration_wait_for_meat, :wrapper_html => {:id => 'duration_wait_for_meat-wrapper'})
+  =f.input(:duration_unit_wait_for_meat, :wrapper_html => {:id => 'duration_unit_wait_for_meat-wrapper'})
