--- a/app/views/entities/_mail_fields.html.haml
+++ b/app/views/entities/_mail_fields.html.haml
@@ -1,10 +1,10 @@
 -# Generated automatically. Don't edit this file.
 .nested-fields
   =link_to_remove_association('labels.remove_mail'.t, f, :class => 'nested-remove remove-mail')
-  =f.input(:canal, :as => :hidden)
-  =f.input(:mail_line_1)
-  =f.input(:mail_line_2)
-  =f.input(:mail_line_3)
-  =f.input(:mail_line_4)
-  =f.input(:mail_line_5)
-  =f.input(:mail_line_6)
+  =f.input(:canal, :as => :hidden, :wrapper_html => {:id => 'canal-wrapper'})
+  =f.input(:mail_line_1, :wrapper_html => {:id => 'mail_line_1-wrapper'})
+  =f.input(:mail_line_2, :wrapper_html => {:id => 'mail_line_2-wrapper'})
+  =f.input(:mail_line_3, :wrapper_html => {:id => 'mail_line_3-wrapper'})
+  =f.input(:mail_line_4, :wrapper_html => {:id => 'mail_line_4-wrapper'})
+  =f.input(:mail_line_5, :wrapper_html => {:id => 'mail_line_5-wrapper'})
+  =f.input(:mail_line_6, :wrapper_html => {:id => 'mail_line_6-wrapper'})
