--- a/app/views/cash_transfers/_form.html.haml
+++ b/app/views/cash_transfers/_form.html.haml
@@ -1,6 +1,6 @@
 -field_set do
   -input :created_on
-  -association :emitter_cash, :source => "entity#cashes"
+  -association :emitter_cash
   -input :emitter_amount
-  -association :receiver_cash, :source => "entity#cashes"
+  -association :receiver_cash
   -input :comment, :field => :text
