--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -534,9 +534,16 @@ div.field.mono-choice .toolbar { margin: 0 8px; }
   }
 }
 
-span.rad {
-  padding: round($fs-normal/8) round($fs-normal/4);
-  * { vertical-align: middle; ; }
+span.rad, label.radio {
+  padding: round($fs-normal/8) 0;
+  @include margin-left(round($fs-normal/2));
+  * { vertical-align: middle; }
+  &:first-child {
+    @include margin-left(0);
+  }
+  input {
+    @include margin-right($fs-normal/4);
+  }
 }
 
 .form-actions {
