--- a/app/views/cashes/_form.html.haml
+++ b/app/views/cashes/_form.html.haml
@@ -1,39 +1,30 @@
 -# TODO Cash form
--if @cash.new_record?
-  =hidden_field :cash, :entity_id
+=field_set do
+  -association :entity, :field => :hidden
+  -input :name
+  -input :currency, :source => :currencies
+  -input :nature, :show => {:bank_account => :bank_account_options} # , :choices=>Cash.natures.collect{|n| [n[0], n[1], {"data-show"=>"##{n[1]}_options", "data-dependents"=>"#cash-accountancy", "data-parameter-name"=>"nature"}]}
 
-=formalize do |f|
-  -f.error :cash
-  -f.title :general
-  -f.field :cash, :name
-  -if @cash.has_dependents?
-    -f.field :cash, :currency, :field=>:label
-    -f.field :cash, :nature_label, :field=>:label
-  -else
-    -f.field :cash, :currency, :choices=>currencies
-    -f.field :cash, :nature, :field=>:radio, :choices=>Cash.natures.collect{|n| [n[0], n[1], {"data-show"=>"##{n[1]}_options", "data-dependents"=>"#cash-accountancy", "data-parameter-name"=>"nature"}]}
+=field_set(:bank_account, :in => :bank_account_options) do # #bank_account_options
+  -input :bank_name
+  -input :address, :field => :text
+  -input :mode, :show => {} # :bban => :bban_options, :iban => :iban_options} # , :field => :radio, :choices=>Cash.modes.collect{|m| [m[0], m[1], {"data-show"=>"##{m[1]}_options"}]}
 
--if @cash.new_record? or @cash.bank_account?
-  #bank_account_options
-    =formalize do |f|
-      -f.title @cash.nature_label
-      -f.field :cash, :bank_name
-      -f.field :cash, :address, :field=>:textarea
-      -f.field :cash, :mode, :field=>:radio, :choices=>Cash.modes.collect{|m| [m[0], m[1], {"data-show"=>"##{m[1]}_options"}]}
-    #bban_options
-      =hidden_field_tag "cash[country]", "fr"
-      =formalize do |f|
-        -f.field :cash, :bank_code, :size=>10
-        -f.field :cash, :agency_code, :size=>10
-        -f.field :cash, :number
-        -f.field :cash, :key, :size=>4
-    =formalize(:id=>:iban_options) do |f|
-      -f.field :cash, :iban, :size=>48
-      -f.field :cash, :bic
+=field_set(:bban, :in => :bank_account_options) do
+  -input :country, :field => :hidden
+  -input :bank_code
+  -input :agency_code
+  -input :number
+  -input :key
 
--if @cash.new_record? or !@cash.bank_account?
-  #cash_box_options
+=field_set(:iban, :in => :bank_account_options) do
+  -input :iban
+  -input :bic
 
-#cash-accountancy{"data-refresh"=>url_for(:controller=>:cashes, :action=>:new, :mode=>:accountancy), "data-refresh-mode"=>"update"}=render :partial=>"accountancy_form"
+=field_set(:accountancy) do
+  -association :account, :source => {{:nature => :bank_account} => :banks, {:nature => :cash_box} => :cashes}, :new => {:number => Account.chart_number(:banks)}
+  -association :journal, :source => {{:nature => :bank_account} => :banks, {:nature => :cash_box} => :cashes}, :new => {:nature => :bank}
+
+-#cash-accountancy{"data-refresh"=>url_for(:controller=>:cashes, :action=>:new, :mode=>:accountancy), "data-refresh-mode"=>"update"}=render :partial=>"accountancy_form"
 
 
