--- a/app/views/animal_events/_form.html.haml
+++ b/app/views/animal_events/_form.html.haml
@@ -15,7 +15,7 @@
   =nested_association(:diagnostics) do
     -input :symptoms
     -input :corpse_location
-    -association :disease
+    -input :disease
 
 -field_set(:treatment) do |f|
   =nested_association(:treatments) do
