Fixes "unknown object" bug on nested form

--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -546,6 +546,12 @@ span.rad, label.radio {
   }
 }
 
+.form-fields {
+  @include respond-to(table) {
+    @include columns(2);
+  }
+}
+
 .form-actions {
   @include text-align(center);
   input, a, span {
