--- a/app/views/operations/_line_fields.html.haml
+++ b/app/views/operations/_line_fields.html.haml
@@ -1,4 +1,5 @@
 -# Generated automatically. Don't edit this file.
+-operation_line ||= f.object
 .nested-fields
   =link_to_remove_association('labels.remove_line'.t, f, :class => 'nested-remove remove-line')
   =f.input(:direction, :wrapper_html => {:id => 'direction-field'})
@@ -7,8 +8,8 @@
       %abbr{:title => 'required'} *
       =OperationLine.human_attribute_name('product')
     .controls
-      =selector(:operation_line, :product, {:controller=>"products", :action=>:unroll}, {:object => object}, :id => 'operation_line-product-input', :class => 'selector required')
-      -for error in object.errors['product']
+      =selector(:operation_line, :product, {:controller=>"products", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-product-input', :class => 'selector required')
+      -for error in operation_line.errors['product']
         %span.help-inline=error
       %span.btn-toolbar
         =link_to({:controller => :products, :action => :new}, 'data-new-item' => 'operation_line-product-input', :class => 'btn btn-new') do
@@ -19,8 +20,8 @@
     %label.control-label{:for => 'operation_line-tracking-input'}
       =OperationLine.human_attribute_name('tracking')
     .controls
-      =selector(:operation_line, :tracking, {:controller=>"trackings", :action=>:unroll}, {:object => object}, :id => 'operation_line-tracking-input', :class => 'selector')
-      -for error in object.errors['tracking']
+      =selector(:operation_line, :tracking, {:controller=>"trackings", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-tracking-input', :class => 'selector')
+      -for error in operation_line.errors['tracking']
         %span.help-inline=error
       %span.btn-toolbar
         =link_to({:controller => :trackings, :action => :new}, 'data-new-item' => 'operation_line-tracking-input', :class => 'btn btn-new') do
@@ -31,8 +32,8 @@
       %abbr{:title => 'required'} *
       =OperationLine.human_attribute_name('warehouse')
     .controls
-      =selector(:operation_line, :warehouse, {:controller=>"warehouses", :action=>:unroll}, {:object => object}, :id => 'operation_line-warehouse-input', :class => 'selector required')
-      -for error in object.errors['warehouse']
+      =selector(:operation_line, :warehouse, {:controller=>"warehouses", :action=>:unroll}, {:object => operation_line}, :id => 'operation_line-warehouse-input', :class => 'selector required')
+      -for error in operation_line.errors['warehouse']
         %span.help-inline=error
       %span.btn-toolbar
         =link_to({:controller => :warehouses, :action => :new}, 'data-new-item' => 'operation_line-warehouse-input', :class => 'btn btn-new') do
